[workspace]
resolver = "3"
members = [
    "crates/core",
]

[workspace.package]
version = "0.9.10"
edition = "2024"
rust-version = "1.96"
authors = [
    "Alex S <shkhln@users.noreply.github.com>",
    "Kevin Bowling <kevin.bowling@kev009.com>",
]
license = "MIT"
repository = "https://github.com/kev009/pw-oss"

[workspace.dependencies]
libc = "0.2.186"
libspa = "0.10.0"
