[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/freebsd-oss",
]

[workspace.package]
version = "0.9.10"
edition = "2024"
rust-version = "1.96"
authors = [
    "Alex S <shkhln@users.noreply.github.com>",
    "Kevin Bowling <kevin.bowling@kev009.com>",
]
license = "MIT"
repository = "https://github.com/kev009/pw-oss"

[workspace.dependencies]
cc = "1.2.67"
libc = "0.2.186"
libspa = "0.10.0"
nix = { version = "0.31.3", features = ["ioctl"] }
regex = "1.13.1"
uds = "=0.4.2"

[profile.release]
lto = "fat"
codegen-units = 1
